crates/ditto-checker/tests/golden/type-errors/type_argument_length_mismatch_0.ditto
module Test exports (..);

fives : Array(Int, Bool) = [1, 2, 3];
